# Openai-Sdk-Projects

./: README.md
Code-Review-Assistant/: main.py  pyproject.toml
Customer-Support-Automation-System/: main.py  pyproject.toml
News-Digest-Generator/: main.py  pyproject.toml
study-assistant/: main.py  pyproject.toml
travel-assistant/: connection.py  main.py  pyproject.toml
